--- a/sleekLoad2/index.html
+++ b/sleekLoad2/index.html
@@ -32,7 +32,7 @@
 	<div id="header">
 		<div id="title"></div>
 		<div id="subtitle">
-			Nous jouons actuellement <span id="gamemode"></span> sur <span id="map"></span>
+			<span id="gamemode"></span> sur <span id="map"></span>
 		</div>
 	</div>
 	<div id="status-container">
